<resources>
    <string name="app_name">Z - Track</string>
    <string name="app_build">API lvl </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_extra">Extras</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_record">New Activity</string>
    <string name="action_history">View History</string>
    <string name="action_search">Search for Route</string>
    <string name="action_about">About Us</string>
    <string name="action_add_marker">Add Marker!</string>
    <string name="action_settings">Settings</string>
    <string name="action_choose">Choose a type of Activity</string>
    <string name="action_refresh">Refresh!</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_post">Post Route</string>

    <string name="show_large_picture_title">New Marker!</string>
    <string name="choose_activity">Choose Activity Type:</string>
    <string name="activity_walk">Walking/Running</string>
    <string name="activity_bike">Biking</string>
    <string name="activity_misc">Other</string>

    <string name="activity_start">Start</string>
    <string name="activity_pause">Pause</string>
    <string name="activity_resume">Resume</string>
    <string name="activity_stop">Stop</string>

    <string name="stats_title">Metric</string>
    <string name="stats_data">Data</string>
    <string name="stats_units">Units</string>

    <string name="activity_item_time">Time</string>
    <string name="activity_item_times">Date</string>
    <string name="activity_item_pace">Pace</string>
    <string name="activity_item_topspeed">Top Speed</string>
    <string name="activity_item_avgspeed">Avg. Speed</string>
    <string name="activity_item_speed">Speeds</string>
    <string name="activity_item_elevation">Elevation</string>
    <string name="activity_item_distance">Distance</string>
    <string name="activity_item_location">Location</string>
    <string name="activity_item_heading">Heading</string>
    <string name="activity_item_markers">Markers</string>
    <string name="activity_item_path">Path</string>
    <string name="lifetimeTitle">Lifetime</string>
    <string name="lifetimeStatsEN">%1$s hrs\n%2$s mi\n%3$s Activities</string>
    <string name="lifetimeStatsSI">%1$s hrs\n%2$s km\n%3$s Activities</string>
    <string name="deleteEvent">Swipe to Delete.</string>
    <string name="noRoutesFound">No Routes Around You :/</string>

    <string name="error_location">Location not found. Please Try Again.</string>

    <string-array name="units_si">
        <item>MM:SS:mmm</item>
        <item>km</item>
        <item>km/hr</item>
        <item>min/km</item>
        <item>m</item>
        <item>°</item>
        <item>°</item>
    </string-array>

    <string-array name="units_en">
        <item>MM:SS:mmm</item>
        <item>mi</item>
        <item>mph</item>
        <item>min/mi</item>
        <item>ft</item>
        <item>°</item>
        <item>°</item>
    </string-array>

    <string name="time">%1$d:%2$s:%3$s</string>

    <string name="post1">Thanks for sharing!  We just need a few more pieces of information..</string>
    <string name="post1a">Scenic</string>
    <string name="post1b">Challenge</string>
    <string name="post2">How Difficult is it??</string>
    <string name="post2b">How Beautiful is it??</string>
    <string name="post3">Share Picture (markers)</string>
    <string name="post4">Review</string>

    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="search_dist_1">10</string>
    <string name="search_dist_2">15</string>
    <string name="search_dist_3">25</string>
    <string name="distance_title">Length</string>
    <string name="rating_title">Rating</string>
    <string name="visit_title">Visits</string>
    <string name="dist_away_title">Distance</string>

    <string name="about1">The development team at Z-track is devoted to enabling it\'s users with the
        power to accurately and effectively record relevant trip information.</string>
    <string name="about2">Developed by:\n\nNicholas Kumia</string>
    <string name="about3">nkumia1@pride.hofstra.edu</string>

    <string name="settings_units">Units</string>
    <string name="settings_units_si">SI</string>
    <string name="settings_units_en">EN</string>
    <string name="settings_data">Save Data?</string>
    <string name="settings_data_explanation">Does not load GoogleMaps, saves Mobile Data</string>
    <string name="settings_weight">Weight</string>
    <string name="settings_weight_no">--</string>

    <string name="google_maps_key">AIzaSyBb8I4oWVH2aFEL2grfV8Cp0Y98hfyyf2U</string>

</resources>
