<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_nav_record"
            android:title="@string/action_record" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/action_history" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_nav_search"
            android:title="@string/action_search" />
    </group>

    <item android:title="@string/title_extra">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/action_about" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
