<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingBottom="16dp"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <android.support.design.widget.CoordinatorLayout
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/unitsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/settings_units"/>

        <Switch
            android:id="@+id/unitsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/settings_units_si"
            android:textOff="@string/settings_units_en"
            android:showText="true"/>

    </android.support.design.widget.CoordinatorLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDark" />

    <android.support.design.widget.CoordinatorLayout
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/settings_data"/>

            <TextView
                android:id="@+id/dataETextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/settings_data_explanation"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/dataCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end" />

    </android.support.design.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDark" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/weightChangeView"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="start"
            android:text="@string/settings_weight"/>

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="end"
            android:text="@string/settings_weight_no"/>

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>