<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".5"
            android:paddingEnd="0dp"
            android:text="@string/manual" />

        <Button
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".5"
            android:paddingStart="0dp"
            android:text="@string/auto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33"
            android:paddingEnd="0dp"
            android:text="@string/search_dist_1" />

        <Button
            android:id="@+id/fiften"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/search_dist_2" />

        <Button
            android:id="@+id/twentyfive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight=".33"
            android:paddingStart="0dp"
            android:text="@string/search_dist_3" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>